--- a/app/views/scales/_form.html.erb
+++ b/app/views/scales/_form.html.erb
@@ -8,7 +8,8 @@
                          ['Harmonic Minor', "harmonic_minor"], ['Dorian', "dorian"],
                          ['Phrygian', "phrygian"], ['Lydian', "lydian"],
                          ['Mixolydian', "mixolydian"], ['Locrian', "locrian"],
-                         ['Octatonic', "octatonic"], ['Pentatonic', "pentatonic"],
-                         ['Hexatonic', "hexatonic"], ['Enigma', "enigma"]])) %>
+                         ['Octatonic', "octatonic"], ['Major Pentatonic', "major_pentatonic"],
+                         ['Minor Pentatonic', "minor_pentatonic"], ['Hexatonic', "hexatonic"],
+                         ['Enigma', "enigma"]])) %>
   <%= submit_tag("Find Scale") %>
 <% end %>
