--- a/app/views/scales/home.html.erb
+++ b/app/views/scales/home.html.erb
@@ -4,8 +4,7 @@
   </div><br />
   <div class="row">
     <div class="col-sm-2">
-      <%= ("KEY:") if @sharp_key != nil %>
-      <%= ("#{@key}") if @sharp_key != nil %>
+      <%= ("KEY: #{@key}") if @sharp_key != nil %>
     </div>
     <div class="col-sm-3">
       <%= ("SCALE: #{@scale}") if @sharp_key != nil %>
@@ -17,7 +16,7 @@
   <br />
   <div class="row">
     <div class="col-sm-2">
-      <%= link_to 'Home', root_path %>
+      <%= link_to icon('home fa-2x'), root_path %>
     </div>
   </div>
 </div>
